--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "id": "58559d0b-5d4a-466b-a198-71bbe8450fbe",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "id": "89a0b3ba-c5e8-445a-9b89-ab225af87ba4",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "id": "1ed6cf35-4baf-49e1-8a66-fd4433e38896",
    "metadata": {},
    "outputs": [
@@ -98,14 +98,8 @@
       "halaman 1 done\n",
       "20 berita\n",
       "halaman 2 done\n",
-      "20 berita\n",
+      "3 berita\n",
       "halaman 3 done\n",
-      "20 berita\n",
-      "halaman 4 done\n",
-      "20 berita\n",
-      "halaman 5 done\n",
-      "7 berita\n",
-      "halaman 6 done\n",
       "0 berita\n",
       "==tanggal 1 done==\n",
       "20 berita\n",
@@ -116,134 +110,10 @@
       "halaman 3 done\n",
       "20 berita\n",
       "halaman 4 done\n",
-      "20 berita\n",
+      "18 berita\n",
       "halaman 5 done\n",
-      "13 berita\n",
-      "halaman 6 done\n",
       "0 berita\n",
       "==tanggal 2 done==\n",
-      "20 berita\n",
-      "halaman 1 done\n",
-      "20 berita\n",
-      "halaman 2 done\n",
-      "20 berita\n",
-      "halaman 3 done\n",
-      "20 berita\n",
-      "halaman 4 done\n",
-      "20 berita\n",
-      "halaman 5 done\n",
-      "10 berita\n",
-      "halaman 6 done\n",
-      "0 berita\n",
-      "==tanggal 3 done==\n",
-      "20 berita\n",
-      "halaman 1 done\n",
-      "20 berita\n",
-      "halaman 2 done\n",
-      "20 berita\n",
-      "halaman 3 done\n",
-      "20 berita\n",
-      "halaman 4 done\n",
-      "20 berita\n",
-      "halaman 5 done\n",
-      "5 berita\n",
-      "halaman 6 done\n",
-      "0 berita\n",
-      "==tanggal 4 done==\n",
-      "20 berita\n",
-      "halaman 1 done\n",
-      "20 berita\n",
-      "halaman 2 done\n",
-      "20 berita\n",
-      "halaman 3 done\n",
-      "20 berita\n",
-      "halaman 4 done\n",
-      "20 berita\n",
-      "halaman 5 done\n",
-      "20 berita\n",
-      "halaman 6 done\n",
-      "15 berita\n",
-      "halaman 7 done\n",
-      "0 berita\n",
-      "==tanggal 5 done==\n",
-      "20 berita\n",
-      "halaman 1 done\n",
-      "20 berita\n",
-      "halaman 2 done\n",
-      "20 berita\n",
-      "halaman 3 done\n",
-      "6 berita\n",
-      "halaman 4 done\n",
-      "0 berita\n",
-      "==tanggal 6 done==\n",
-      "20 berita\n",
-      "halaman 1 done\n",
-      "20 berita\n",
-      "halaman 2 done\n",
-      "20 berita\n",
-      "halaman 3 done\n",
-      "5 berita\n",
-      "halaman 4 done\n",
-      "0 berita\n",
-      "==tanggal 7 done==\n",
-      "20 berita\n",
-      "halaman 1 done\n",
-      "20 berita\n",
-      "halaman 2 done\n",
-      "18 berita\n",
-      "halaman 3 done\n",
-      "0 berita\n",
-      "==tanggal 8 done==\n",
-      "20 berita\n",
-      "halaman 1 done\n",
-      "20 berita\n",
-      "halaman 2 done\n",
-      "11 berita\n",
-      "halaman 3 done\n",
-      "0 berita\n",
-      "==tanggal 9 done==\n",
-      "20 berita\n",
-      "halaman 1 done\n",
-      "19 berita\n",
-      "halaman 2 done\n",
-      "0 berita\n",
-      "==tanggal 10 done==\n",
-      "20 berita\n",
-      "halaman 1 done\n",
-      "20 berita\n",
-      "halaman 2 done\n",
-      "3 berita\n",
-      "halaman 3 done\n",
-      "0 berita\n",
-      "==tanggal 11 done==\n",
-      "20 berita\n",
-      "halaman 1 done\n",
-      "20 berita\n",
-      "halaman 2 done\n",
-      "4 berita\n",
-      "halaman 3 done\n",
-      "0 berita\n",
-      "==tanggal 12 done==\n",
-      "20 berita\n",
-      "halaman 1 done\n",
-      "20 berita\n",
-      "halaman 2 done\n",
-      "20 berita\n",
-      "halaman 3 done\n",
-      "0 berita\n",
-      "==tanggal 13 done==\n",
-      "20 berita\n",
-      "halaman 1 done\n",
-      "17 berita\n",
-      "halaman 2 done\n",
-      "0 berita\n",
-      "==tanggal 14 done==\n",
-      "20 berita\n",
-      "halaman 1 done\n",
-      "19 berita\n",
-      "halaman 2 done\n",
-      "0 berita\n",
-      "==tanggal 15 done==\n",
       "20 berita\n",
       "halaman 1 done\n",
       "20 berita\n",
@@ -257,7 +127,7 @@
       "2 berita\n",
       "halaman 6 done\n",
       "0 berita\n",
-      "==tanggal 16 done==\n",
+      "==tanggal 3 done==\n",
       "20 berita\n",
       "halaman 1 done\n",
       "20 berita\n",
@@ -268,10 +138,146 @@
       "halaman 4 done\n",
       "20 berita\n",
       "halaman 5 done\n",
-      "14 berita\n",
+      "9 berita\n",
       "halaman 6 done\n",
       "0 berita\n",
-      "==tanggal 17 done==\n",
+      "==tanggal 4 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "4 berita\n",
+      "halaman 5 done\n",
+      "0 berita\n",
+      "==tanggal 5 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "3 berita\n",
+      "halaman 4 done\n",
+      "0 berita\n",
+      "==tanggal 6 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "3 berita\n",
+      "halaman 4 done\n",
+      "0 berita\n",
+      "==tanggal 7 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "15 berita\n",
+      "halaman 5 done\n",
+      "0 berita\n",
+      "==tanggal 8 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "19 berita\n",
+      "halaman 5 done\n",
+      "0 berita\n",
+      "==tanggal 9 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "15 berita\n",
+      "halaman 5 done\n",
+      "0 berita\n",
+      "==tanggal 10 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "20 berita\n",
+      "halaman 5 done\n",
+      "12 berita\n",
+      "halaman 6 done\n",
+      "0 berita\n",
+      "==tanggal 11 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "20 berita\n",
+      "halaman 5 done\n",
+      "7 berita\n",
+      "halaman 6 done\n",
+      "0 berita\n",
+      "==tanggal 12 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "14 berita\n",
+      "halaman 3 done\n",
+      "0 berita\n",
+      "==tanggal 13 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "10 berita\n",
+      "halaman 3 done\n",
+      "0 berita\n",
+      "==tanggal 14 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "18 berita\n",
+      "halaman 5 done\n",
+      "0 berita\n",
+      "==tanggal 15 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "19 berita\n",
+      "halaman 5 done\n",
+      "0 berita\n",
+      "==tanggal 16 done==\n",
       "20 berita\n",
       "halaman 1 done\n",
       "20 berita\n",
@@ -285,6 +291,20 @@
       "8 berita\n",
       "halaman 6 done\n",
       "0 berita\n",
+      "==tanggal 17 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "20 berita\n",
+      "halaman 5 done\n",
+      "2 berita\n",
+      "halaman 6 done\n",
+      "0 berita\n",
       "==tanggal 18 done==\n",
       "20 berita\n",
       "halaman 1 done\n",
@@ -296,7 +316,7 @@
       "halaman 4 done\n",
       "20 berita\n",
       "halaman 5 done\n",
-      "4 berita\n",
+      "3 berita\n",
       "halaman 6 done\n",
       "0 berita\n",
       "==tanggal 19 done==\n",
@@ -306,7 +326,7 @@
       "halaman 2 done\n",
       "20 berita\n",
       "halaman 3 done\n",
-      "1 berita\n",
+      "3 berita\n",
       "halaman 4 done\n",
       "0 berita\n",
       "==tanggal 20 done==\n",
@@ -314,8 +334,12 @@
       "halaman 1 done\n",
       "20 berita\n",
       "halaman 2 done\n",
-      "11 berita\n",
+      "20 berita\n",
       "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "11 berita\n",
+      "halaman 5 done\n",
       "0 berita\n",
       "==tanggal 21 done==\n",
       "20 berita\n",
@@ -342,7 +366,7 @@
       "halaman 4 done\n",
       "20 berita\n",
       "halaman 5 done\n",
-      "13 berita\n",
+      "8 berita\n",
       "halaman 6 done\n",
       "0 berita\n",
       "==tanggal 23 done==\n",
@@ -354,10 +378,8 @@
       "halaman 3 done\n",
       "20 berita\n",
       "halaman 4 done\n",
-      "20 berita\n",
+      "16 berita\n",
       "halaman 5 done\n",
-      "10 berita\n",
-      "halaman 6 done\n",
       "0 berita\n",
       "==tanggal 24 done==\n",
       "20 berita\n",
@@ -368,8 +390,10 @@
       "halaman 3 done\n",
       "20 berita\n",
       "halaman 4 done\n",
-      "16 berita\n",
+      "20 berita\n",
       "halaman 5 done\n",
+      "5 berita\n",
+      "halaman 6 done\n",
       "0 berita\n",
       "==tanggal 25 done==\n",
       "20 berita\n",
@@ -380,7 +404,7 @@
       "halaman 3 done\n",
       "20 berita\n",
       "halaman 4 done\n",
-      "19 berita\n",
+      "14 berita\n",
       "halaman 5 done\n",
       "0 berita\n",
       "==tanggal 26 done==\n",
@@ -388,17 +412,15 @@
       "halaman 1 done\n",
       "20 berita\n",
       "halaman 2 done\n",
-      "20 berita\n",
+      "16 berita\n",
       "halaman 3 done\n",
-      "1 berita\n",
-      "halaman 4 done\n",
       "0 berita\n",
       "==tanggal 27 done==\n",
       "20 berita\n",
       "halaman 1 done\n",
       "20 berita\n",
       "halaman 2 done\n",
-      "17 berita\n",
+      "18 berita\n",
       "halaman 3 done\n",
       "0 berita\n",
       "==tanggal 28 done==\n",
@@ -410,14 +432,22 @@
       "halaman 3 done\n",
       "20 berita\n",
       "halaman 4 done\n",
-      "20 berita\n",
+      "12 berita\n",
       "halaman 5 done\n",
-      "20 berita\n",
-      "halaman 6 done\n",
-      "15 berita\n",
-      "halaman 7 done\n",
       "0 berita\n",
       "==tanggal 29 done==\n",
+      "20 berita\n",
+      "halaman 1 done\n",
+      "20 berita\n",
+      "halaman 2 done\n",
+      "20 berita\n",
+      "halaman 3 done\n",
+      "20 berita\n",
+      "halaman 4 done\n",
+      "17 berita\n",
+      "halaman 5 done\n",
+      "0 berita\n",
+      "==tanggal 30 done==\n",
       "20 berita\n",
       "halaman 1 done\n",
       "20 berita\n",
@@ -430,15 +460,15 @@
       "halaman 5 done\n",
       "20 berita\n",
       "halaman 6 done\n",
-      "5 berita\n",
+      "4 berita\n",
       "halaman 7 done\n",
       "0 berita\n",
-      "==tanggal 30 done==\n"
+      "==tanggal 31 done==\n"
      ]
     }
    ],
    "source": [
-    "data = scraping(30, 4, 2024)"
+    "data = scraping(31, 1, 2024)"
    ]
   },
   {
@@ -451,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "id": "01e7c4a3-f30d-473e-a7ed-057d36f2ac32",
    "metadata": {},
    "outputs": [
@@ -481,24 +511,24 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2506</th>\n",
-       "      <td>\\nIsi Pertemuan PM Singapura dengan Jokowi dan...</td>\n",
+       "      <th>2766</th>\n",
+       "      <td>\\nTom Lembong Respons Sentilan Keras Luhut dan...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2507</th>\n",
-       "      <td>\\nViral Bea Masuk Barang Tinggi, Komisi XI DPR...</td>\n",
+       "      <th>2767</th>\n",
+       "      <td>\\nCara Cek Nomor Rekening BCA 2024 Via BCA Mob...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2508</th>\n",
-       "      <td>\\nBahlil Sebut Sukanto Tanoto Investasi di IKN...</td>\n",
+       "      <th>2768</th>\n",
+       "      <td>\\nTok! Jokowi Naikkan Gaji PNS dan PPPK di Tah...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2509</th>\n",
-       "      <td>\\nAkhir Kehebohan Alat Belajar SLB yang Viral ...</td>\n",
+       "      <th>2769</th>\n",
+       "      <td>\\nPenghargaan Living Legend Company 2024\\n</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2510</th>\n",
-       "      <td>\\nRencana Freeport Nambang di Papua sampai 206...</td>\n",
+       "      <th>2770</th>\n",
+       "      <td>\\nDekatkan Konsumen dengan Jamkrindo Digital E...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -506,14 +536,14 @@
       ],
       "text/plain": [
        "                                                  judul\n",
-       "2506  \\nIsi Pertemuan PM Singapura dengan Jokowi dan...\n",
-       "2507  \\nViral Bea Masuk Barang Tinggi, Komisi XI DPR...\n",
-       "2508  \\nBahlil Sebut Sukanto Tanoto Investasi di IKN...\n",
-       "2509  \\nAkhir Kehebohan Alat Belajar SLB yang Viral ...\n",
-       "2510  \\nRencana Freeport Nambang di Papua sampai 206..."
+       "2766  \\nTom Lembong Respons Sentilan Keras Luhut dan...\n",
+       "2767  \\nCara Cek Nomor Rekening BCA 2024 Via BCA Mob...\n",
+       "2768  \\nTok! Jokowi Naikkan Gaji PNS dan PPPK di Tah...\n",
+       "2769         \\nPenghargaan Living Legend Company 2024\\n\n",
+       "2770  \\nDekatkan Konsumen dengan Jamkrindo Digital E..."
       ]
      },
-     "execution_count": 70,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,17 +554,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "id": "cc816d70-6af7-4d7c-8e6e-f25f2d9e0b68",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nAntisipasi Mudik Lebaran, Pertamina Siapkan SPBU-Agen LPG Tambahan\\n'"
+       "'\\nMusim Liburan Nataru 600 Ribu Orang Menyeberang dari Pulau Jawa ke Sumatera\\n'"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,12 +583,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "id": "63e4c28d-7c27-4073-88ff-fb607c01834c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv('data_4_2024.csv', index=False, encoding='utf-8')"
+    "data.to_csv('data_1_2024.csv', index=False, encoding='utf-8')"
    ]
   },
   {
